--- a/userdashboard.html
+++ b/userdashboard.html
@@ -444,6 +444,38 @@ Inspection: `
   `
 };
 
+  function initDashboard(){
+  const ctx = document.getElementById("pipelineChart");
+  if(!ctx) return;
+
+  const labels = ["Week 1","Week 2","Week 3","Week 4","Week 5","Week 6"];
+  const data = [50,60,55,70,65,75];
+
+  if(window.pipelineChart) window.pipelineChart.destroy();
+
+  window.pipelineChart = new Chart(ctx,{
+    type:"line",
+    data:{
+      labels: labels,
+      datasets:[{
+        label:"Supply Chain Flow",
+        data:data,
+        borderColor:"#0a53c1",
+        backgroundColor:"rgba(10,83,193,0.1)",
+        fill:true,
+        tension:0.2
+      }]
+    },
+    options:{
+      responsive:true,
+      plugins:{ legend:{ display:false } },
+      scales:{
+        y:{ beginAtZero:true }
+      }
+    }
+  });
+}
+
   function makeStarsEditable(selector){
   document.querySelectorAll(selector).forEach(td => {
     td.innerHTML = '';
@@ -672,11 +704,20 @@ function initReports(refNo){
 
 function renderPage(page, refNo=null){
   contentArea.innerHTML = pages[page] || `<h1>${page}</h1>`;
-  if(page === "dashboard") initDashboard();
+
+  if(page === "dashboard"){
+    initDashboard();
+    makeStarsEditable('td[data-stars]');
+  }
   if(page === "Supply") attachRefLinks();
   if(page === "Reports") initReports(refNo);
-  if(page === "Commodity") initCommodity();
-  if(page === "Inspection"){}
+  if(page === "Commodity"){
+    initCommodity();
+    makeStarsEditable('td[data-stars]');
+  }
+  if(page === "Inspection"){
+    makeStarsEditable('td[data-stars]');
+  }
 }
 
 
