--- a/userdashboard.html
+++ b/userdashboard.html
@@ -444,34 +444,32 @@ Inspection: `
   `
 };
 
-  function initDashboard(){
+ function initDashboard() {
   const ctx = document.getElementById("pipelineChart");
-  if(!ctx) return;
+  if (!ctx) return;
 
-  const labels = ["Week 1","Week 2","Week 3","Week 4","Week 5","Week 6"];
-  const data = [50,60,55,70,65,75];
+  const labels = ["Week 1", "Week 2", "Week 3", "Week 4", "Week 5", "Week 6"];
+  const data = [50, 60, 55, 70, 65, 75];
 
-  if(window.pipelineChart) window.pipelineChart.destroy();
+  if (window.pipelineChart) window.pipelineChart.destroy();
 
-  window.pipelineChart = new Chart(ctx,{
-    type:"line",
-    data:{
+  window.pipelineChart = new Chart(ctx, {
+    type: "line",
+    data: {
       labels: labels,
-      datasets:[{
-        label:"Supply Chain Flow",
-        data:data,
-        borderColor:"#0a53c1",
-        backgroundColor:"rgba(10,83,193,0.1)",
-        fill:true,
-        tension:0.2
+      datasets: [{
+        label: "Supply Chain Flow",
+        data: data,
+        borderColor: "#0a53c1",
+        backgroundColor: "rgba(10,83,193,0.1)",
+        fill: true,
+        tension: 0.2
       }]
     },
-    options:{
-      responsive:true,
-      plugins:{ legend:{ display:false } },
-      scales:{
-        y:{ beginAtZero:true }
-      }
+    options: {
+      responsive: true,
+      plugins: { legend: { display: false } },
+      scales: { y: { beginAtZero: true } }
     }
   });
 }
@@ -702,22 +700,25 @@ function initReports(refNo){
 }
 
 
-function renderPage(page, refNo=null){
+function renderPage(page, refNo = null) {
   contentArea.innerHTML = pages[page] || `<h1>${page}</h1>`;
 
-  if(page === "dashboard"){
-    initDashboard();
-    makeStarsEditable('td[data-stars]');
-  }
-  if(page === "Supply") attachRefLinks();
-  if(page === "Reports") initReports(refNo);
-  if(page === "Commodity"){
-    initCommodity();
-    makeStarsEditable('td[data-stars]');
-  }
-  if(page === "Inspection"){
-    makeStarsEditable('td[data-stars]');
-  }
+  
+  setTimeout(() => {
+    if (page === "dashboard") {
+      initDashboard();
+      makeStarsEditable('td[data-stars]');
+    }
+    if (page === "Supply") attachRefLinks();
+    if (page === "Reports") initReports(refNo);
+    if (page === "Commodity") {
+      initCommodity();
+      makeStarsEditable('td[data-stars]');
+    }
+    if (page === "Inspection") {
+      makeStarsEditable('td[data-stars]');
+    }
+  }, 50); 
 }
 
 
